fix key alignment

--- a/src/assets/stylesheets/main/_typeset.scss
+++ b/src/assets/stylesheets/main/_typeset.scss
@@ -293,7 +293,6 @@ kbd {
     padding: 2px px2em(6px, 12px);
     color: var(--md-default-fg-color);
     font-size: px2em(14px);
-    vertical-align: text-top;
     word-break: break-word;
     background-color: var(--md-typeset-kbd-color);
     border-radius: px2rem(2px);
