--- a/src/assets/stylesheets/main/extensions/pymdownx/_keys.scss
+++ b/src/assets/stylesheets/main/extensions/pymdownx/_keys.scss
@@ -66,7 +66,6 @@
 
     span {
       padding: 0 px2em(3.2px);
-      vertical-align: bottom;
       color: var(--md-default-fg-color--light);
     }
 
